# polybench

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  config.example.json
benchmarks/: bench_exchange.cpp  bench_fixed_string.cpp  bench_ingest_pipeline.cpp  bench_json_parser.cpp  bench_logger.cpp  bench_market_book.cpp  bench_python_callback.cpp  bench_ring_buffer.cpp  bench_small_vector.cpp
scripts/: generate_config_for_15m.py  ws_test.py
src/: bindings.cpp  config.hpp  dual_layer_book.cpp  dual_layer_book.hpp  engine.cpp  engine.hpp  exchange.cpp  exchange.hpp  ingest_pipeline.cpp  ingest_pipeline.hpp  json_parser.cpp  json_parser.hpp  logger.cpp  logger.hpp  main.cpp  market_book.cpp  market_book.hpp  market_data_transport.hpp  mock_exchange.cpp  mock_exchange.hpp  order_book.cpp  order_book.hpp  perf_stats.cpp  perf_stats.hpp  polymarket_ws.cpp  polymarket_ws.hpp  portfolio_tracker.cpp  portfolio_tracker.hpp  strategy.hpp  types.hpp  utils.hpp
src/trading/: exchange.cpp  exchange.hpp  market_book.cpp  portfolio_tracker.cpp  portfolio_tracker.hpp  strategy.hpp
src/transport/: ingest_pipeline.cpp  ingest_pipeline.hpp  io_uring_ws.cpp  io_uring_ws.hpp  json_parser.cpp  json_parser.hpp  market_data_transport.hpp  polymarket_ws.cpp  polymarket_ws.hpp  tls_context.hpp  ws_frame_parser.hpp
src/types/: common.hpp  fixed_string.hpp  polymarket.hpp  ring_buffer.hpp  small_vector.hpp  virtual_order.hpp
src/utils/: logger.cpp  logger.hpp  perf_stats.cpp  perf_stats.hpp  thread.cpp  thread.hpp  timer.hpp
strategies/: arbitrage.py  hedging.py  simple.py  strategy.py
tests/: test_exchange.cpp  test_fixed_string.cpp  test_io_uring_ws.cpp  test_json_parser.cpp  test_market_book.cpp  test_market_data_transport.cpp  test_portfolio_tracker.cpp  test_ring_buffer.cpp  test_small_vector.cpp  test_ws_frame_parser.cpp
